# ccircle

./: .gitignore  .tool-versions  Pipfile  README.md  _config.yml  index.md  pyproject.toml  requirements.txt  setup.py
cc/: __init__.py  _color.py  _constant.py  _indexed_vbo.py  _position.py  _shader.py  _shader_source.py  _texture.py  _triangle_vbo.py  _util.py  _uv.py  _vec4.py  _vertex.py  _vertex_cache.py  _window_input.py  color.py  colors.py  constant.py  font.py  image.py  point.py  position.py  shader.py  test.py  text.py  util.py  vertex.py  window.py  window_input.py
cc/ds/: circle.py  color.py  point.py  triangle.py
cc/setup/mac/: install_dependencies.sh  setup_dependencies.sh
cc/setup/windows/: install_dependencies.bat
cc/shapes/: circle.py  rectangle.py  shape.py  triangle.py
cc_student/docs/environment_setup/: gitNewClone.md  gitPullStaffChanges.md  setup.md  setup1.md  setup2.md  setup3.md  setup4.md  setup5.md  setup6.md
cc_student/hello_world/: 01_hello.py  02_cc_hello.py  03_logo_generator.py  04_wip_genie_minimize.py
cc_student/scenario01/: scenario01.py  solution.py
cc_student/scenario01/skeleton/: _world.py  cat.py  constant.py  handler.py
cc_student/scenario02/: scenario02.py  solution.py
cc_student/scenario02/skeleton/: problem.py  util.py
cc_student/scenario04/server/: util.py
cc_student/wip/lab_wk2_mon/: ball.py  cloud.py  world.py
cc_student/wip/scenario01/: scenario01.py  solution.py
docs/: _config.yml  index.md
docs/environment_setup/: index.md
docs/setup/: gitNewClone.md  gitPullStaffChanges.md  setup1.md  setup2.md  setup3.md  setup4.md  setup5.md  setup6.md
pyproject/01_hello/: hello.py
pyproject/02_ccircle_hello/: cc_hello.py
pyproject/scenario01/: README.md  cat.py  main.py  solution.py
pyproject/scenario02/: README.md  constant.py  main.py  problem.py  scenario02.py  solution.py  util.py
res/docs/: index.md
setup/darwin/: setup_dependencies.sh
(+43 files in other folders)
