[tool.poetry]
name = "ccircle"
version = "0.1.0"
description = ""
authors = ["Brendan Hu <contact@brendanhu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.10"
attrs = "20.3.0"
Automat = "20.2.0"
constantly = "15.1.0"
cycler = "0.10.0"
decorator = "5.1.0"
glfw = "2.6.2"
hyperlink = "21.0.0"
idna = "2.10"
incremental = "21.3.0"
kiwisolver = "1.4.0"
matplotlib = "3.5.0"
opencv-python = "4.8.1.78"
Pillow = "9.0.1"
PyHamcrest = "2.0.2"
PyOpenGL = "3.1.5"
PyOpenGL-accelerate = "^3.1.7"
pypandoc = "1.6.3"
pyparsing = "3.0.4"
python-dateutil = "2.8.2"
PyWavelets = "1.1.1"
scikit-image = "0.22.0"
six = "1.16.0"
Twisted = "21.7.0"
yapf = "0.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
